--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "homepage": "https://masoudsoleymani.github.io/stopwatch",
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf build && yarn build",
+    "build": "react-scripts build && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
